edit: Logic methods